Fonts: Open Sans replaced by Roboto (Open Sans too high); cmf.app.less/css - fixed side menu opener icon position and added opening transform; cmf.utils.js - improved side menu links highlihter to support resource edit form and details pages

--- a/src/PeskyCMF/public/css/font-replace.css
+++ b/src/PeskyCMF/public/css/font-replace.css
@@ -1,7 +1,7 @@
-@import "fonts/opensans.css";
+@import "fonts/Roboto/roboto.css";
 
 body {
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h1,
@@ -16,5 +16,5 @@ h6,
 .h4,
 .h5,
 .h6 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
